feat(JVM): add jvm options for jdk17